--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
    <h1>ستاسی څخه یوه نړي مننه!</h1>
    <audio autoplay>
-       <source src="https://soundcloud.com/hasibullah-atiqi-293897446/recording?si=749b58fac7c94e58876b3a3dcec5aa56&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mpeg">
+       <source src="Recording.mp3" type="audio/mpeg">
        Your browser does not support the audio element.
    </audio>
 </body>
