--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
    <h1>ستاسی څخه یوه نړي مننه!</h1>
    <audio autoplay>
-       <source src="Recording.mp3" type="audio/mpeg">
+       <source src="https://github.com/hasibullahatiqi2/barya-academy/blob/e4e55a93c375efa4a54ebb0539da10da2810d0b9/Recording.mp3" type="audio/mpeg">
        Your browser does not support the audio element.
    </audio>
 </body>
