--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
    <h1>ستاسی څخه یوه نړي مننه!</h1>
    <audio autoplay>
-       <source src="https://raw.githubusercontent.com/hasibullahatiqi2/barya-academy/main/Recording.mp3" type="audio/mpeg">
+       <source src="Recording.mp3" type="audio/mpeg">
        Your browser does not support the audio element.
    </audio>
 </body>
