--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
 </head>
 <body>
    <h1>ستاسی څخه یوه نړي مننه!</h1>
-   <audio autoplay>
-       <source src="https://github.com/hasibullahatiqi2/barya-academy/blob/main/Recording.mp3" type="audio/mpeg">
-       Your browser does not support the audio element.
-   </audio>
+   <h1>Atiqi</h1>
 </body>
 </html>
