--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <body>
    <h1>ستاسی څخه یوه نړي مننه!</h1>
    <h2>H</h2>
+   <audio autoplay>
+      <source src="https://github.com/hasibullahatiqi2/barya-academy/blob/main/Recording.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+   </audio>
 </body>
 </html>
